# x11-screenshot

./: CMakeLists.txt
include/: screenshot.h
src/: main.cpp  screenshot.cpp
